# nilt

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  cpp-tests.yml  draft-pdf.yml  pipeline.yml  python-tests.yml  release.yml  test-and-release.yml
cmake/: niltConfig.cmake.in
examples/groundwater/: README.md  plot_theis_well.py  plot_well_dipole.py  theis_well.cpp  theis_well.py  well_dipole.cpp  well_dipole.py
examples/transport/: README.md  advection_plume_2d.cpp  advection_plume_2d.py  cylinder_diffusion.cpp  cylinder_diffusion.py  plot_advection_plume_2d.py  plot_cylinder_diffusion.py  plot_sphere_diffusion.py  sphere_diffusion.cpp  sphere_diffusion.py
examples/utils/: bessel.hpp  plot_args.py
examples/verification/: plot_benchmark.py  plot_verification.py  testfunctions.hpp  utils.hpp
include/: dehoog.hpp  invlap.hpp  nilt.hpp  stehfest.hpp  talbot.hpp
module/: benchmark.cpp
paper/: paper.bib  paper.md
python/: CMakeLists.txt  nilt_bind.cpp
python/nilt/: __init__.py
scripts/: plot_benchmark.py
tests/: conftest.py  test_bindings.py  test_dehoog.cpp  test_dehoog.py  test_stehfest.cpp  test_stehfest.py  test_talbot.cpp  test_talbot.py  test_tolerances.hpp  test_tolerances.py  test_verification.cpp  test_verification.py  testfunctions.hpp  utils.hpp
verification/: README.md  benchmark_timing.cpp  benchmark_timing.py  verification.cpp  verification.py
