[project]
name = "nilt"
version = "1.3.0"
description = "NILT - Numerical Inverse Laplace Transform (Stehfest, Talbot, and De Hoog algorithms)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest", "scipy"]
plot = ["matplotlib", "scipy"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "python"
wheel.packages = ["python/nilt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
# Keep pyproject.toml and CMakeLists.txt in lockstep.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["CMakeLists.txt:NILT_VERSION"]
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ['''chore\(release\):''']

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build", "ci", "docs", "style", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
